Add dinoAPI, index skelly, UI logic
Co-authored-by: Ellie Lambert <ebezjian@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,16 @@
   <title>Document</title>
 </head>
 <body>
+  
+  <div class="container">
+  <div id="dinoWord">test</div> 
+  <div id="error"></div> 
+    <form id="userGuesses">
+      <label for="letterGuess">Letters to guess</label><br>
+      <input type="text" id="letterGuess">
+      <button class="button" type="submit" id="guessButton">Guess</button>
+      <div id="letter"></div>
+    </form>
+  </div>
 </body>
 </html>
