--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
 <body>
   
   <div class="container">
-  <div id="dinoWord">test</div> 
+  <div id="dinoWord">test</div>
+  <button class="button" type="button" id="getWord">Get a Dino Word</button> 
   <div id="error"></div> 
     <form id="userGuesses">
       <label for="letterGuess">Letters to guess</label><br>
